--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -17,8 +17,6 @@ parameters:
             - { queryParam: since, fieldName: datetime, operator: gt }
             - { queryParam: until, fieldName: datetime, operator: lt }
 framework:
-    #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -26,15 +24,12 @@ framework:
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
-        #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
     fragments:       ~
     http_method_override: true
@@ -42,7 +37,6 @@ framework:
       enabled: true
       enable_annotations: true
 
-# Doctrine Configuration
 doctrine:
     dbal:
         driver:   pdo_mysql
@@ -68,40 +62,12 @@ doctrine:
                 prefix: AppBundle\Oro\WebServerLog\Model
 
 fos_rest:
-#    format_listener: false
-#    view:
-#        view_response_listener: force
-#        force_redirects:
-#          html: true
-#        formats:
-#            jsonp: true
-#            json: true
-#            xml: true
-#            rss: false
-#        templating_formats:
-#            json: true
-#        mime_types:
-#            json: ['application/json', 'application/x-json', 'application/vnd.example-com.foo+json']
-#        jsonp_handler: ~
     body_listener: true
     param_fetcher_listener: force
-#    allowed_methods_listener: true
-#    access_denied_listener:
-#        json: true
-#    format_listener:
-#        rules:
-#            - { path: ^/liip/hello/rest, priorities: [html, json, xml], fallback_format: ~, prefer_extension: false }
-#            - { path: ^/, priorities: [ html, json, xml ], fallback_format: ~, prefer_extension: true }
-#    routing_loader:
-#        default_format: json
-#    exception:
-#        codes:
-#            'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
-#            'Doctrine\ORM\OptimisticLockException': HTTP_CONFLICT
-#        messages:
-#            'Symfony\Component\Routing\Exception\ResourceNotFoundException': true
-#    service:
-#        view_handler: liip_hello.view_handler
     serializer:
-#        version: 1.0
         groups: [data]
+    routing_loader:
+        default_format: json
+        include_format: false
+    exception:
+        enabled: true
