--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "friendsofsymfony/rest-bundle": "1.7.7",
         "symfony/serializer": "2.7.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.9"
+    },
     "config": {
         "bin-dir": "bin",
         "platform": {
